--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,9 @@ code {
 .stt--endButton:hover {
   background-color: black;
 }
+
+.stt--textDisplay {
+  height: 500px;
+  width: 500px;
+  font-size: 14pt;
+}
