fix button sizing

--- a/src/index.css
+++ b/src/index.css
@@ -31,13 +31,15 @@ code {
 
 .form--startButton {
   position: absolute;
+  width: 260px;
+  height: 160px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: #1f3566;
   color: white;
-  font-size: 16px;
+  font-size: 30px;
   padding: 12px 24px;
   border: none;
   cursor: pointer;
